﻿1.15.27.alpha.1 - 10th April 2024
- Added flight times.
- Leatrix Plus for Cataclysm Classic will be available April 2024.

1.15.26 - 10th April 2024
- Added flight times.

1.15.25 - 3rd April 2024
- Updated for game version 1.15.2.
- Added flight times.

1.15.24 - 27th March 2024
- Updated deprecated functions.
- Added flight times.

1.15.23 - 20th March 2024
- Added flight times.

1.15.22 - 13th March 2024
- For 'Enhance minimap' ('Interface'), the 'Combine addon buttons' setting will now sort addon buttons alphabetically.
- Added flight times.

1.15.21 - 6th March 2024
- Added flight times.

1.15.20 - 28th February 2024
- Added flight times.

1.15.19 - 21st February 2024
- Updated ScrollFrameTemplate for Media.
- Added flight times.

1.15.18 - 14th February 2024
- For 'Enhanced quest log' ('Interface'), fixed an issue with showing quest level suffixes for non-English locales.
- Added flight times.

1.15.17 - 7th February 2024
- Updated for game version 1.15.1.
- For 'Enhance minimap' ('Interface'), updated tooltip positioning logic.  Added Wowhead Looter button.
- For 'Recent chat window' ('Chat'), scroll speed is now based on font size.
- Added flight times.

1.15.16 - 3rd February 2024
- The 'Enhance minimap' ('Interface') option is now able to display custom buttons correctly if Leatrix Plus is aware of them.
- For 'Automate quests' ('Automation'), quests from Valadar Starsong and Fariel Starsong (Moonglade) will no longer be automated.
- Added flight times.

1.15.15 - 1st February 2024
- Updated translations.

1.15.14 - 31st January 2024
- For 'Automate quests' ('Automation'), quests from supply officers (for supply shipments) will no longer be automated.
- Added flight times.

1.15.13 - 24th January 2024
- For 'Show vendor price' ('System'), if the game reports that the price of 'Phoenix Bindings' is 40 silver, Leatrix Plus will show the correct price of 24 silver 81 copper.
- Fixed ScrollFrameTemplate editbox widths.
- Added flight times.
