@@ -1,4 +1,5 @@
 ﻿1.15.27.alpha.1 - 10th April 2024
+- Added a new setting called 'Keep audio synced' ('System').  If checked, when you change the audio output device in your operating system, the game audio output device will change automatically.|n|nFor this to work, the game audio output device will be set to system default.
 - Added flight times.
 - Leatrix Plus for Cataclysm Classic will be available April 2024.
 
